# openwebif-mcp-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  SKILL.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/openwebif_mcp/: __init__.py  openwebif.py  server.py
tests/: e2e_openwebif_mcp.py
